# macro-pulse

./: .env.example  .gitignore  README.md  app.py  packages.txt  plan.md  pyproject.toml  requirements.txt  research.md  run_weekly.py
.streamlit/: config.toml
ai/: llm.py
ai/chains/: consensus_synthesizer.py  mechanism_matcher.py  narrative_extractor.py  non_consensus_discoverer.py  regime_classifier.py
ai/prompts/: templates.py
analysis/: calibration.py  chain_verifier.py  composite_scorer.py  consensus_scorer.py  direction_targets.py  nc_enricher.py  nc_validator.py  outcome_tracker.py  position_sizer.py  price_validator.py  regime_voter.py  risk_checks.py  scenario_aggregator.py  sentiment_aggregator.py  technicals.py  trade_params.py  trade_sheet.py
collectors/: base.py  central_bank.py  cot_reports.py  derivatives_consensus.py  economic_calendar.py  economic_data.py  etf_flows.py  eth_onchain.py  exa_news.py  fear_greed.py  funding_rates.py  google_trends.py  market_data.py  mempool.py  onchain.py  options_consensus.py  prediction_markets.py  reddit.py  rss_news.py  spreads.py  twitter.py  youtube_crypto.py
config/: assets.yaml  gen-lang-client-0447739779-e30ea47da3e3.json  mechanisms.py  mechanisms.yaml  risk.yaml  settings.py  signal_roles.py  sources.yaml
dashboard/: actionable_view.py  narratives.py  overview.py  price_validation.py  regime.py  styles.py  trade_view.py
exports/: sheets.py
models/: schemas.py
storage/: positions.py  store.py
tests/: test_collectors.py  test_pipeline_smoke.py  test_price_validator.py  test_schemas.py
